Added 'middle pane' in home.js and added middle section styling to styles.css - Sai Chaitanya Vishnu Kanth Inavolu

--- a/esparto/src/styles.css
+++ b/esparto/src/styles.css
@@ -105,3 +105,8 @@ body{
     background-color: #555;
     display :flex;
   }
+
+  .middleSection{
+    height: 160px;
+    background-color: #bfb7b7;
+  }
