--- a/esparto/src/styles.css
+++ b/esparto/src/styles.css
@@ -116,3 +116,14 @@ body{
     display: flex;
 
   }
+
+  footer {
+    background-color: #000000;
+    text-align: center;
+    padding: 15px;
+  }
+
+  #footerLink1,#footerLink2,#footerLink3 {
+    color: #0088ff;
+    text-decoration: none;
+  }
