--- a/esparto/src/styles.css
+++ b/esparto/src/styles.css
@@ -133,3 +133,14 @@ body{
     text-align: end;
     padding: 10px;
   }
+
+  #contactTable {
+    /* align-items: center;
+    padding-left: 50%; */
+    margin-left: auto;
+    margin-right: auto;
+    border: 2px solid rgb(255, 94, 94);
+  }
+  th {
+    border-bottom: 1px solid black
+  }
