--- a/esparto/src/components/AboutUs/AboutUs.css
+++ b/esparto/src/components/AboutUs/AboutUs.css
@@ -12,9 +12,11 @@
 }
 
 .side-image {
-  max-width: 500px;
+  max-width: 700px;
   height: auto;
   margin-right: 20px;
+  padding: 50px;
+  border-radius: 50px;
 }
 
 .text-content {
@@ -23,11 +25,11 @@
 
 .about-us-container h2,
 .about-us-container h3 {
-  color: #333;
+  color: #ffffff;
 }
 
 .about-us-container p {
-  font-size: 18px;
+  font-size: 25px;
   line-height: 1.5;
-  color: #666;
+  color: #ffffff;
 }
