--- a/esparto/src/components/Carousel/Carousel.css
+++ b/esparto/src/components/Carousel/Carousel.css
@@ -1,9 +1,10 @@
 /* YourCarouselComponent.css  */
 .carousel-item img {
-  max-width: 90%; /* Set the maximum width of the images to 100% */
+  max-width: 75%; /* Set the maximum width of the images to 100% */
   max-height: 700px;
   height: auto;
   margin: 0 auto; /* Center the images horizontally */
+  padding: 35px;
 }
 
 /* Carousel.css */
