--- a/esparto/src/components/Navbar/Navbar.css
+++ b/esparto/src/components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   padding: 30px;
-  background-color: #f9f6f6;
+  background-color: #d1dee7;
   color: #fff;
   align-items: center; /* Center vertically */
 }
