--- a/esparto/src/components/UserProfile/UserProfile.css
+++ b/esparto/src/components/UserProfile/UserProfile.css
@@ -2,7 +2,17 @@
 
 /* //Varsha */
 
-/* Sailaja */
+.context {
+  width: 100%;
+  position: absolute;
+  top: 15vh;
+}
+
+.context h1 {
+  text-align: center;
+  color: #fff;
+  font-size: 50px;
+}
 
 /* Manoj Thella */
 /* Sahithi */
