--- a/esparto/src/components/UserProfile/UserProfile.css
+++ b/esparto/src/components/UserProfile/UserProfile.css
@@ -40,7 +40,24 @@ body {
   overflow:hidden;
 }
 
-/* Sahithi */
+.circles li {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 25s linear infinite;
+  bottom: -150px;
+}
+
+.circles li:nth-child(1) {
+  left: 25%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+
 /* Vishnu */
 .circles li:nth-child(4) {
   left: 40%;
