--- a/esparto/src/components/UserProfile/UserProfile.css
+++ b/esparto/src/components/UserProfile/UserProfile.css
@@ -58,7 +58,21 @@ body {
   animation-delay: 0s;
 }
 
-/* Vishnu */
+.circles li:nth-child(2) {
+  left: 10%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 2s;
+  animation-duration: 12s;
+}
+
+.circles li:nth-child(3) {
+  left: 70%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 4s;
+}
+
 .circles li:nth-child(4) {
   left: 40%;
   width: 60px;
