Altered the basic Stylings of the AboutUs Page.

--- a/esparto/src/components/AboutUs/AboutUs.css
+++ b/esparto/src/components/AboutUs/AboutUs.css
@@ -33,3 +33,15 @@
   line-height: 1.5;
   color: #ffffff;
 }
+
+/* Varsha */
+
+.content-section 
+{
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  background-color: chartreuse;
+  font-size: large;
+  color: brown;  
+}
+
+
