changed the code for painting js and inserted a painting

--- a/esparto/src/components/AboutUs/AboutUs.css
+++ b/esparto/src/components/AboutUs/AboutUs.css
@@ -36,12 +36,12 @@
 
 /* Varsha */
 
-.content-section 
+/* .content-section 
 {
   font-family:Georgia, 'Times New Roman', Times, serif;
   background-color: chartreuse;
   font-size: large;
   color: brown;  
-}
+} */
 
 
