--- a/esparto/src/components/Collections/Collections.css
+++ b/esparto/src/components/Collections/Collections.css
@@ -48,9 +48,9 @@
 
 /* Manoj Thella */
 
-.collections-list {
+/* .collections-list {
   font-family: 'Times New Roman', Times, serif;
   color: skyblue;
   position: absolute;
-}
+} */
 
