--- a/esparto/src/components/Login/main.css
+++ b/esparto/src/components/Login/main.css
@@ -109,15 +109,15 @@
 }
 
 /* Vishnu */
-.login100-form {
+/* .login100-form {
   position: relative;
   width: 350px;
   background: #24fff8;
   padding: 0%;
-}
+} */
 
 /* Vishnu */
-.input100 {
+/* .input100 {
   font-family: 'Libre Baskerville', serif;
   font-family: 'Poppins', sans-serif;
   font-size: 22px;
@@ -125,4 +125,4 @@
   line-height: 1.5;
   padding: 20px 0;
   width: 100%;
-}
+} */
