--- a/esparto/src/components/Carousel/Carousel.css
+++ b/esparto/src/components/Carousel/Carousel.css
@@ -27,3 +27,12 @@
   font-size: 25px;
   margin: 0;
 }
+/*
+Sahithi
+*/
+.carousel-items img {
+  max-width: 75%; /* Set the maximum width of the images to 100% */
+  max-height: 800px;
+  height: auto;
+  padding: 35px;
+}
