Updated the Carousel,NavBar changes for Picture Quality, Size related

--- a/esparto/src/components/Navbar/Navbar.css
+++ b/esparto/src/components/Navbar/Navbar.css
@@ -40,3 +40,14 @@
   gap: 10px; /* Adjust the gap between logo and text */
   margin-left: 20px; /* Add left margin for space */
 }
+
+/*Sailaja Lakkakula*/
+
+/* Navbar.css
+.logo-container {
+  display: flex;
+  align-items: center;
+  gap: 10px; /* Adjust the gap between logo and text */
+  /* margin-left: 20px; Add left margin for space
+} */
+
