--- a/esparto/src/components/UserProfile/UserProfile.css
+++ b/esparto/src/components/UserProfile/UserProfile.css
@@ -158,3 +158,10 @@ body {
     rgba(253, 160, 133, 1)
   );
 }
+
+/* Manoj Thella */
+.context {
+  border: #4e54c8;
+  padding: 5%;
+  background-color: aliceblue;
+}
