--- a/esparto/src/components/Carousel/Carousel.css
+++ b/esparto/src/components/Carousel/Carousel.css
@@ -37,4 +37,12 @@ Sahithi
   height: auto;
   padding: 35px;
 }
->>>>>>> 9e05f21a13d886d593fd0bacabfed72256cc3070
+
+
+/* sailaja Lakkakula*/
+
+/* .custom-caption p {
+  font-size: 65px; / Added the max size to image
+  margin: 0;
+} */
+
