Added Styling to  Whats-New-container in Whatsnew page

--- a/esparto/src/components/Whatsnew/Whatsnew.css
+++ b/esparto/src/components/Whatsnew/Whatsnew.css
@@ -36,3 +36,11 @@
     margin: 0;
   }
   
+  /* Varsha Kalkakuntla */
+
+  .whats-new-container {
+    font-family: 'Times New Roman', Times, serif;
+    background: fixed;
+    padding: 10%;
+  }
+  
