--- a/esparto/src/CollectionPages/Images.css
+++ b/esparto/src/CollectionPages/Images.css
@@ -5,3 +5,10 @@
     background-color: black;
     border-radius: 5px;
 }
+
+/* Vishnu */
+.img-style{
+    background: #e811a1;
+    background: -webkit-linear-gradient(to left, #fb8fdb, #fd008f);
+    float: left;
+}
