--- a/esparto/src/components/Sidebar/Sidebar.css
+++ b/esparto/src/components/Sidebar/Sidebar.css
@@ -1,7 +1,45 @@
+/* .sidebar {
+  width: 200px; 
+  height: auto; 
+  background-color: #f0f0f0; 
+  float: left; 
+} */
 .sidebar {
-    width: 200px; /* Set the width of the sidebar according to your design */
-    height: auto; /* Set the height of the sidebar to cover the entire viewport height */
-    background-color: #f0f0f0; /* Set the background color of the sidebar */
-    float: left; /* Float the sidebar to the left */
+  width: 60px; /* Initial width of the closed sidebar */
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #333;
+  overflow-x: hidden;
+  transition: 0.3s;
+  /* padding-top: 20px; */
+  color: white;
+  z-index: 1;
+}
+
+.sidebar.open {
+  width: 250px; /* Width of the open sidebar */
+}
+
+.menu-icon {
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  padding: 26px 18px;
+  background-color: #444;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  padding: 15px;
+  text-align: center;
+  cursor: pointer;
+  &:hover {
+    background-color: #555;
   }
-  
+}
