added the artist login page and customer login page

--- a/esparto/src/components/Navbar/Navbar.css
+++ b/esparto/src/components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   padding: 30px;
-  background-color: #e8d2d2;
+  background-color: #0aaf86;
   color: #fff;
   align-items: center; /* Center vertically */
 }
