--- a/esparto/src/components/UserProfile/UserProfile.css
+++ b/esparto/src/components/UserProfile/UserProfile.css
@@ -157,17 +157,18 @@ body {
 }
 
 /* Manoj Thella */
-.context {
+/* .context {
   border: #4e54c8;
   padding: 5%;
   background-color: aliceblue;
-}
+} */
 
 /* Vishnu */
-.circles {
+/* .circles {
   position: absolute;
   top: 10;
   left: 10;
   right: 10;
   height: 100vh;
-}
+} */
+
